yet more cleanup